# Mandrel

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  state.tsx  styles.css
frontend/src/components/: ChatPanel.tsx  Dock.tsx  PanZoom.tsx  Sidebar.tsx  StageRail.tsx
mandrel/: __main__.py  config.py
mandrel/adapters/: base.py  cad.py  freerouting.py  kicad.py  skidl_gen.py
mandrel/api/: app.py  artifacts.py  runs.py
mandrel/core/: checkpoints.py  project.py  state.py  workflow.py
mandrel/db/: models.py  repository.py
mandrel/knowledge/: __init__.py  classify.py  evaluate.py  provider.py  schema.py
mandrel/knowledge/ingest/: __init__.py  base.py  extractor.py  pipeline.py  store.py
mandrel/knowledge/rules/: connectors_mechanical.yaml  decoupling.yaml  (+18 more)
mandrel/llm/: prompts.py  provider.py
mandrel/pipeline/: noop.py  s1_intent.py  s2_architecture.py  s3_schematic.py  s4_layout.py  s5_enclosure.py  s6_bom.py
mandrel/sourcing/: base.py  octopart.py  stub.py
mandrel/ui/: index.html
mandrel/verify/: architecture.py  base.py  bom.py  clearance.py  drc.py  erc.py
tests/: conftest.py  test_knowledge.py  test_knowledge_evaluate.py  test_knowledge_ingest.py  test_pipeline.py  test_s1_intent.py  test_s2_architecture.py  test_s3_schematic.py  test_s4_layout.py  test_s5_enclosure.py  test_s6_bom.py
(+15 files in other folders)
