[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mandrel"
version = "0.1.0"
description = "Open-source orchestration engine: product idea → verified, manufacturable electronics design"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.21",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "anyio>=4.7",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
mandrel = "mandrel.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mandrel --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]
